--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,15 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
+
+@responsive {
+  .gradient {
+    background: linear-gradient(
+        121.87deg,
+        #060606 15.05%,
+        rgba(55, 57, 57, 0.93) 61.84%
+      )
+      cover center;
+    /* border-radius: 150px 150px 0px 0px; */
+  }
+}
