--- a/src/App.css
+++ b/src/App.css
@@ -3,26 +3,8 @@
 @tailwind utilities;
 
 #root {
-  /* max-width: 1280px; */
   margin: 0 auto;
-  /* padding: 1rem; */
-  /* text-align: center; */
-  --clr-bg-dark: #1f2937; /* gray-800 */
-  --clr-bg-light: #fafafa; /* zinc-50 */
-
-  --clr-text-dark: #1f2937; /* gray-200 */
-  --clr-text-light: #fafafa; /* zinc-50 */
 }
-
-/* .dark {
-  background-color: var(--clr-bg-dark);
-  color: var(--clr-text-dark);
-}
-
-.light {
-  background-color: var(--clr-bg-light);
-  color: var(--clr-text-light);
-} */
 
 @responsive {
   .gradient {
@@ -31,6 +13,24 @@
       #060606 15.05%,
       rgba(55, 57, 57, 0.93) 61.84%
     );
-    /* border-radius: 150px 150px 0px 0px; */
   }
+}
+
+.hideMenuNav {
+  display: none;
+}
+.showMenuNav {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: white;
+  color: black;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
