--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ button:focus-visible {
   }
 } */
 
-@responsive {
+@layer utilities {
   .gradient {
     background: linear-gradient(
         121.87deg,
@@ -84,3 +84,21 @@ button:focus-visible {
     /* border-radius: 150px 150px 0px 0px; */
   }
 }
+
+/* .hideMenuNav {
+  display: none;
+}
+.showMenuNav {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: white;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+} */
