--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @import url("satoshi.css"); */
 
 #root {
+  font-family: "Satoshi", sans-serif;
+  /* font-family: "Satoshi-Variable";
+  font-family: "Satoshi-VariableItalic";
+  font-family: "Satoshi-Light";
+  font-family: "Satoshi-LightItalic";
+  font-family: "Satoshi-Regular";
+  font-family: "Satoshi-Italic";
+  font-family: "Satoshi-Medium";
+  font-family: "Satoshi-MediumItalic";
+  font-family: "Satoshi-Bold";
+  font-family: "Satoshi-BoldItalic";
+  font-family: "Satoshi-Black";
+  font-family: "Satoshi-BlackItalic"; */
   margin: 0 auto;
 }
 
@@ -33,4 +47,9 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.change-bold {
+  font-family: "Satoshi", sans-serif;
+  font-weight: 700;
 }
